--- a/forms/main_window.ui
+++ b/forms/main_window.ui
@@ -556,6 +556,11 @@
           </column>
           <column>
            <property name="text">
+            <string>Type</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
             <string>Mount point</string>
            </property>
           </column>
