--- a/ui/new_serve_window.ui
+++ b/ui/new_serve_window.ui
@@ -106,6 +106,13 @@
     </layout>
    </item>
    <item>
+    <widget class="QCheckBox" name="checkBox_use_ram">
+     <property name="text">
+      <string>Use RAM as a drive</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Optional</string>
